--- a/main.html
+++ b/main.html
@@ -7,6 +7,28 @@
 </head>
 
 <body>
+	<table>
+		<thead>
+			<tr>
+				<th>
+					roll number
+				</th>
+				<th>
+					name
+				</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Ajay</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Avi</td>
+			</tr>
+		</tbody>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
